@@ -1,3 +1,4 @@
+q
 #------------------------------------
 # Description:
 #  ChangeLog file for package PSCalib
@@ -7,6 +8,13 @@ Package author: Mikhail Dubrovin
 
 Please describe any modifications that you made to the package in the
 reverse time order.
+
+Tag: V02-00-15
+2021-09-22 Daniel Damiani
+- add support for Alvium detector
+	modified:   include/CalibParsStore.h
+	modified:   src/CalibParsStore.py
+	modified:   src/GlobalUtils.py
 
 Tag: V02-00-14
 2021-09-20 Mikhail Dubrovin
